# discord-ai-assistant-bot

./: .env_template  .gitignore  LICENSE  README.md  bot.py  pyproject.toml  sys_prompt.txt  voicevox_config.json  voicevox_speakers.csv
cogs/: __init__.py  ai.py  ai_cog.py
services/: __init__.py  ai_responder.py  backup_service.py  chat_history.py  gemini.py  message_preprocessor.py  voice_config.py  voicevox.py
sys_prompts/: default.txt  kuze_shizuka.txt  takopi.txt
tests/: test_quick.py  test_services_voicevox.py  test_utils_text.py
utils/: config.py  text.py
